trying to fix clipping

--- a/assets/css/_about.scss
+++ b/assets/css/_about.scss
@@ -61,7 +61,7 @@
 }
 
 .intro-image {
-  width: 300px;
+  width: 250px;
   height: auto;
   border-radius: 50%;
   object-fit: cover;
